# snoopy

./: .gitignore  LICENSE  Makefile  README.md  config.py  pyproject.toml
.github/lint/: pyproject.toml
core/bots/: bot.py  command.py  handler.py  menu.py  run.py  utils.py  wrapper.py
core/scripts/dwh/: manager.py  table_map.py
core/scripts/exchange/: base.py  divergence.py  exchange.py  exs.py  indicator.py  manager.py  utils.py
core/scripts/mexc/: api.py  manager.py  utils.py
core/scripts/tools/: files.py  psql.py
core/sql/dwh/: replica.sql
core/templates/: button.py  command.py  error.py  message.py
data/mexc/: BTC_USDT_Min15.json  mexc_exchange_info.json  mexc_futures_info.json  mexc_listed_coins.json
docs/: faq.md
logs/: logger.py
