[tool.poetry]
name = "snoopy"
version = "0.1.0"
description = "Crypto Snoopy Bot"
authors = ["Slava Golyshevskii <sgolyshevskii@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-telegram-bot = "^21.7"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
